contrast fixes

--- a/portfolio/src/components/card/card.scss
+++ b/portfolio/src/components/card/card.scss
@@ -8,7 +8,7 @@
   flex-basis: 100%;
   position: relative;
   overflow: hidden;
-  border: 4px solid var(--gray-5);
+  border: 4px solid var(--gray-13);
 
   transition: all 0.3s ease-in-out;
 
